--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
     "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
-    "styled-components": "^6.1.13",
     "react-transition-group": "^4.4.5",
+    "redux-persist": "^6.0.0",
+    "styled-components": "^6.1.13",
     "yup": "^1.4.0"
   },
   "devDependencies": {
