--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "modern-normalize": "^3.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-ellipsis-text": "^1.2.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-loader-spinner": "^6.1.6",
